Implementing Edit and Delete (2)
- Decide based on the menu clicked (save or delete) if save or delete deal, then show message to customer, clean fields (if deal is new deal) and go back to travel deals list.

- If we want to delete a deal that  doesn't exist then an "error" is shown to the user.
- Add new delete option menu

- Update UI by resetting the array list each time we get bak to the list activity => create a new array List every time the reference is called, and not only when FrebaseUtill is null.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="description_hint">Description</string>
     <string name="save_menu">save</string>
     <string name="menu_newTravelDeal">New Travel Deal</string>
+    <string name="delete_deal">Delete deal</string>
 </resources>
